[package]
name = "exceptional"
version.workspace = true
authors = [
  "Andrea Fioraldi <andreafioraldi@gmail.com>",
  "Dominik Maier <domenukk@gmail.com>",
]
description = "Everything for your exception and signal handling needs"
documentation = "https://docs.rs/libafl"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = ["os", "shmem", "no-std"]
edition = "2024"
rust-version = "1.87"
categories = ["embedded", "os", "no-std"]

[package.metadata.docs.rs]
features = ["document-features"]
all-features = true

[features]
default = ["std", "alloc"]
document-features = ["dep:document-features"]

#! # Feature Flags
#! ### General Features

## Enables features that need rust's `std` lib to work, like print, env, ... support
std = ["nix", "libafl_core/std", "alloc"]

## Enables all features that allocate in `no_std`
alloc = ["libafl_core/alloc"]

[build-dependencies]
rustversion = { workspace = true }

[dev-dependencies]

[dependencies]
# Document all features of this crate (for `cargo doc`)
document-features = { workspace = true, optional = true }
libafl_core = { workspace = true }
nix = { workspace = true, optional = true, default-features = false, features = [
  "fs",
  "signal",
  "socket",
  "poll",
] }
num_enum = { workspace = true, default-features = false }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
log = { workspace = true }
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Kernel",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
] }
windows-core = { workspace = true }

[lints]
workspace = true
