[package]
name = "libafl_cc"
version.workspace = true
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>"]
description = "Commodity library to wrap compilers and link LibAFL"
documentation = "https://docs.rs/libafl_cc"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "testing", "compiler"]
edition = "2024"
rust-version = "1.89"
categories = [
  "development-tools::testing",
  "emulators",
  "embedded",
  "os",
  "no-std",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "function-logging",
  "cmplog-routines",
  "autotokens",
  "coverage-accounting",
  "cmplog-instructions",
  "ctx",
  "dump-cfg",
]

# llvm passes
function-logging = []
cmplog-routines = []
autotokens = []
coverage-accounting = []
cmplog-instructions = []
ctx = []
dump-cfg = []
git-recency = ["dep:object"]

[[bin]]
name = "libafl_git_recency_mapgen"
path = "src/bin/libafl_git_recency_mapgen.rs"
required-features = ["git-recency"]

[build-dependencies]
cc = { workspace = true, features = ["parallel"] }
which = { workspace = true }

[target.'cfg(target_vendor = "apple")'.build-dependencies]
glob = "0.3.3"

[dependencies]
serde = { workspace = true, default-features = false, features = [
  "alloc",
  "derive",
] } # serialization lib
object = { version = "0.38.1", optional = true }

[lints]
workspace = true
